--- a/bower.json
+++ b/bower.json
@@ -4,26 +4,25 @@
   "dependencies": {
     "d3": "3.4.6",
     "gsap": "1.11.7",
-    "angular-animate": "1.2.15",
-    "angular": "~1.2.15",
+    "angular-animate": "~1.2.17",
+    "angular": "~1.2.17",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
-    "angular-resource": "1.2.15",
-    "angular-cookies": "1.2.15",
-    "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15",
-    "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15",
+    "jquery": "~1.11.0",
+    "bootstrap-sass-official": "~3.1.0",
+    "angular-resource": "1.2.17",
+    "angular-cookies": "1.2.17",
+    "angular-sanitize": "1.2.17",
+    "angular-route": "1.2.17",
+    "angular-mocks": "1.2.17",
+    "angular-scenario": "1.2.17",
     "angular-bootstrap": "~0.11.0",
-    "angular-carousel": "~0.2.3",
     "modernizr": "~2.8.2",
     "jquery.stellar": "~0.6.2",
     "jquery.easing": "~1.3.0",
     "jquery-waypoints": "~2.0.5",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "angular-carousel": "~0.2.3"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "angular": "1.2.15"
-  }
+  "devDependencies": {}
 }
