--- a/bower.json
+++ b/bower.json
@@ -15,13 +15,13 @@
     "angular-sanitize": "1.2.17",
     "angular-route": "1.2.17",
     "angular-mocks": "1.2.17",
-    "angular-scenario": "1.2.17",    
+    "angular-scenario": "1.2.17",
     "modernizr": "~2.8.2",
-    "jquery.stellar": "~0.6.2",
     "jquery.easing": "~1.3.0",
     "jquery-waypoints": "~2.0.5",
     "font-awesome": "~4.1.0",
-    "angular-carousel": "~0.2.3"
+    "angular-carousel": "~0.2.3",
+    "angular-parallax": "*"
   },
   "devDependencies": {}
 }
