Fixed a myrida of issues: animation in background poppin gon parallax views fixed. Directive for embedding youtube videos added. Navigation bar title position bug on small screens fixed. Adde dn content for about section.

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "jquery-waypoints": "~2.0.5",
     "font-awesome": "~4.1.0",
     "angular-carousel": "~0.2.3",
-    "angular-parallax": "*"
+    "angular-parallax": "*",
+    "ng-videosharing-embed": "~0.2.1"
   },
   "devDependencies": {}
 }
