--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "karma-chrome-launcher": "^0.1.3",
     "phantomjs": "^1.9.7-5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "angular-animate": "0.0.2"
+    "angular-animate": "0.0.2",
+    "connect-livereload": "^0.4.0",
+    "delayed-stream": "0.0.5"
   },
   "engines": {
     "node": ">=0.10.0"
