--- a/bower.json
+++ b/bower.json
@@ -2,29 +2,29 @@
   "name": "aquiferium",
   "version": "0.0.1",
   "dependencies": {
-    "d3": "3.4.6",
-    "gsap": "1.11.7",
-    "angular-animate": "~1.2.17",
+    "modernizr": "~2.8.2",
     "angular": "~1.2.17",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "jquery": "~1.11.0",
-    "bootstrap-sass-official": "~3.1.0",
+    "angular-animate": "~1.2.17",
     "angular-resource": "1.2.17",
     "angular-cookies": "1.2.17",
     "angular-sanitize": "1.2.17",
     "angular-route": "1.2.17",
     "angular-mocks": "1.2.17",
     "angular-scenario": "1.2.17",
-    "modernizr": "~2.8.2",
-    "jquery.easing": "~1.3.0",
-    "jquery-waypoints": "~2.0.5",
-    "font-awesome": "~4.1.0",
     "angular-carousel": "~0.2.3",
     "angular-parallax": "*",
     "ng-videosharing-embed": "~0.2.1",
+    "d3": "3.4.6",
+    "json3": "~3.2.6",
+    "es5-shim": "~2.1.0",
+    "jquery": "~1.11.0",
+    "jquery.easing": "~1.3.0",
+    "jquery-waypoints": "~2.0.5",
     "skrollr": "~0.6.26",
-    "skrollr-menu": "~0.1.12"
+    "skrollr-menu": "~0.1.12",
+    "gsap": "1.11.7",
+    "font-awesome": "~4.1.0",
+    "bootstrap-sass-official": "~3.1.0"
   },
   "devDependencies": {
   }
