Added in opacity changes to interactive component recharge. Doesnt perfomr well or look thatrm well or look great. Same with colors. Will think up anbother visual indicator for changes in aquifer levels.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "aquiferium",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-connect-proxy": "^0.1.11"
+  },
   "devDependencies": {
     "angular-animate": "0.0.2",
     "connect-livereload": "^0.4.0",
