--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,9 @@
     "font-awesome": "~4.1.0",
     "bootstrap-sass-official": "~3.1.0",
     "leaflet": "~0.7.3",
-    "angular-leaflet-directive": "~0.7.8"
+    "angular-leaflet-directive": "~0.7.8",
+    "leaflet-tilelayer-geojson": "*",
+    "jQuery.print": "~1.2.0"
   },
   "devDependencies": {}
 }
