--- a/bower.json
+++ b/bower.json
@@ -30,5 +30,8 @@
     "leaflet-tilelayer-geojson": "*",
     "jQuery.print": "~1.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "angular": "1.3.x"
+  }
 }
