--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery-waypoints": "~2.0.5",
     "skrollr": "~0.6.26",
     "skrollr-menu": "~0.1.12",
+    "skrollr-stylesheets": "0.0.6",
     "gsap": "1.11.7",
     "font-awesome": "~4.1.0",
     "bootstrap-sass-official": "~3.1.0",
@@ -30,7 +31,8 @@
     "leaflet-tilelayer-geojson": "*",
     "jQuery.print": "~1.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "resolutions": {
     "angular": "1.3.x"
   }
