--- a/bower.json
+++ b/bower.json
@@ -3,37 +3,51 @@
   "version": "0.0.1",
   "dependencies": {
     "modernizr": "~2.8.2",
-    "angular": "~1.2.17",
-    "angular-animate": "~1.2.17",
-    "angular-resource": "1.2.17",
-    "angular-cookies": "1.2.17",
-    "angular-sanitize": "1.2.17",
-    "angular-route": "1.2.17",
-    "angular-mocks": "1.2.17",
-    "angular-scenario": "1.2.17",
-    "angular-carousel": "~0.2.3",
+    "angular": "~1.3.5",
+    "angular-animate": "~1.3.5",
+    "angular-resource": "~1.3.5",
+    "angular-cookies": "~1.3.5",
+    "angular-sanitize": "~1.3.5",
+    "angular-route": "~1.3.5",
+    "angular-mocks": "~1.3.5",
+    "angular-scenario": "~1.3.5",
+    "angular-carousel": "~0.3.7",
     "angular-parallax": "*",
     "ng-videosharing-embed": "~0.2.1",
-    "d3": "3.4.6",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "jquery": "~1.11.0",
+    "d3": "~3.4.13",
+    "json3": "~3.3.2",
+    "es5-shim": "~4.0.5",
+    "jquery": "~2.1.1",
     "jquery.easing": "~1.3.0",
     "jquery-waypoints": "~2.0.5",
     "skrollr": "~0.6.26",
     "skrollr-menu": "~0.1.12",
     "skrollr-stylesheets": "0.0.6",
-    "gsap": "1.11.7",
-    "font-awesome": "~4.1.0",
+    "gsap": "~1.15.0",
+    "font-awesome": "~4.2.0",
     "bootstrap-sass-official": "~3.1.0",
     "leaflet": "~0.7.3",
     "angular-leaflet-directive": "~0.7.8",
     "leaflet-tilelayer-geojson": "*",
-    "jQuery.print": "~1.2.0"
+    "jQuery.print": "~1.2.0",
+    "bootstrap-sass": "~3.0.2"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "resolutions": {
-    "angular": "1.3.x"
+    "angular": "~1.3.5",
+    "angular-animate": "~1.3.5",
+    "angular-resource": "~1.3.5",
+    "angular-cookies": "~1.3.5",
+    "angular-sanitize": "~1.3.5",
+    "angular-route": "~1.3.5",
+    "angular-mocks": "~1.3.5",
+    "angular-scenario": "~1.3.5",
+    "angular-carousel": "~0.3.7",
+    "d3": "~3.4.13",
+    "json3": "~3.3.2",
+    "es5-shim": "~4.0.5",
+    "jquery": "~2.1.1",
+    "gsap": "~1.15.0",
+    "font-awesome": "~4.2.0"
   }
 }
