--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,9 @@
     "jQuery.print": "~1.2.0",
     "bootstrap-sass": "~3.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "leaflet.markercluster": "~0.4.0"
+  },
   "resolutions": {
     "angular": "~1.3.5",
     "angular-animate": "~1.3.5",
