--- a/bower.json
+++ b/bower.json
@@ -25,31 +25,12 @@
     "skrollr-stylesheets": "0.0.6",
     "gsap": "~1.15.0",
     "font-awesome": "~4.2.0",
-    "bootstrap-sass-official": "~3.1.0",
     "leaflet": "~0.7.3",
+    "leaflet.markercluster": "~0.4.0",
+    "bootstrap-sass-official": "~3.3.1",
     "angular-leaflet-directive": "~0.7.8",
     "leaflet-tilelayer-geojson": "*",
-    "jQuery.print": "~1.2.0",
-    "bootstrap-sass": "~3.0.2"
+    "jQuery.print": "~1.2.0"
   },
-  "devDependencies": {
-    "leaflet.markercluster": "~0.4.0"
-  },
-  "resolutions": {
-    "angular": "~1.3.5",
-    "angular-animate": "~1.3.5",
-    "angular-resource": "~1.3.5",
-    "angular-cookies": "~1.3.5",
-    "angular-sanitize": "~1.3.5",
-    "angular-route": "~1.3.5",
-    "angular-mocks": "~1.3.5",
-    "angular-scenario": "~1.3.5",
-    "angular-carousel": "~0.3.7",
-    "d3": "~3.4.13",
-    "json3": "~3.3.2",
-    "es5-shim": "~4.0.5",
-    "jquery": "~2.1.1",
-    "gsap": "~1.15.0",
-    "font-awesome": "~4.2.0"
-  }
+  "devDependencies": {}
 }
