--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "angular-animate": "0.0.2",
     "connect-livereload": "^0.4.0",
     "delayed-stream": "0.0.5",
+    "eventemitter3": "^0.1.6",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
     "grunt-concurrent": "~0.5.0",
+    "grunt-connect-proxy": "^0.1.11",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-concat": "~0.3.0",
