--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "dependencies": {
     "modernizr": "~2.8.2",
-    "angular": "~1.3.5",                // 2
+    "angular": "~1.3.5", 
     "angular-animate": "~1.3.5",
-    "angular-resource": "~1.3.5",       // 5
-    "angular-cookies": "~1.3.5",        // 3
-    "angular-sanitize": "~1.3.5",       // 1
+    "angular-resource": "~1.3.5",
+    "angular-cookies": "~1.3.5",
+    "angular-sanitize": "~1.3.5",
     "angular-route": "~1.3.5",
     "angular-mocks": "~1.3.5",
     "angular-scenario": "~1.3.5",
